fixes scrollbar

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 .scrollable-y {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
